--- a/SolviaDynamics365AddressManager/appsettings.json
+++ b/SolviaDynamics365AddressManager/appsettings.json
@@ -4,6 +4,10 @@
     "ClientId": "",
     "ClientSecret": ""
   },
+  "DynamicsApi": {
+    "ApiBaseUrl": "https://tenant.crmnn.dynamics.com/",
+    "ApiVersion": "9.2"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
